--- a/LibraryPortal/appsettings.json
+++ b/LibraryPortal/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LibraryPortal-4655b297-0be5-4ff5-b3b1-4855ce00de13;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-RQ7MMFV;Initial Catalog=LibraryPortal;Integrated Security=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
